Add static website files

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://www.nasken.ai/" />
   <link rel="icon" href="assets/logo.svg">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Plus+Jakarta+Sans:wght@600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -33,7 +34,8 @@
         <h1>Smarter interviews. <span class="accent">Better hiring.</span></h1>
         <p class="lead">Run AI-assisted interviews with <strong>real‑time verification</strong>, <strong>anti‑cheating signals</strong>, and <strong>structured scoring</strong>—all in one place.</p>
         <div class="cta">
-          <a class="btn primary" href="https://calendly.com/sandeshgv/30min" target="_blank" rel="noopener">Book a 30‑min demo</a>
+          <a class="btn primary" href="#features">Explore features</a>
+          <a class="btn ghost" href="about.html">Contact sales</a>
         </div>
         <div class="hero-badges">
           <span>⚡ Fast setup</span>
@@ -50,7 +52,7 @@
 
     <!-- Logos / social proof (placeholder) -->
     <section class="logos" aria-label="Trusted by">
-      <p>Built by engineers from leading ad tech and infra teams.</p>
+      <p>Created by engineers with backgrounds at the world’s leading technology companies.</p>
       <div class="logo-row">
         <div class="logo-pill">Realtime verification</div>
         <div class="logo-pill">Structured scoring</div>
@@ -133,6 +135,10 @@
       </header>
       <div class="faq">
         <details>
+          <summary>What are “anti‑cheating signals”?</summary>
+          <p>They’re behavioral and technical indicators like copy/paste bursts, unusual window focus, timing anomalies, and language‑style shifts. They don’t auto‑fail anyone; they help interviewers interpret results fairly.</p>
+        </details>
+        <details>
           <summary>Do candidates know what’s being captured?</summary>
           <p>Yes. We show a clear in‑product notice describing the signals collected and the purpose. Candidates can proceed with informed consent.</p>
         </details>
@@ -150,6 +156,7 @@
         </details>
       </div>
     </section>
+  </main>
 
   <footer class="site-footer">
     <div class="footer-grid">
