--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
   <header class="site-header">
     <a class="brand" href="/"><img src="assets/logo.svg" alt="" /><span>Nasken AI</span></a>
     <nav id="nav" class="nav">
+      <a href="about.html">About</a>
       <a href="#features">Features</a>
       <a href="#how">How it works</a>
       <a href="#faq">FAQ</a>
-      <a class="btn small" href="#contact">Request demo</a>
     </nav>
     <button id="navToggle" class="nav-toggle" aria-label="Toggle menu" aria-expanded="false">
       <span></span><span></span><span></span>
@@ -35,11 +35,11 @@
         <p class="lead">Run AI-assisted interviews with <strong>real‑time verification</strong>, <strong>anti‑cheating signals</strong>, and <strong>structured scoring</strong>—all in one place.</p>
         <div class="cta">
           <a class="btn primary" href="#features">Explore features</a>
-          <a class="btn ghost" href="about.html">Contact sales</a>
+          <a class="btn ghost" href="https://calendly.com/sandeshgv/30min?month=2025-08">Book demo</a>
         </div>
         <div class="hero-badges">
           <span>⚡ Fast setup</span>
-          <span>🛡️ ADA‑friendly options</span>
+          <span>🛡️ Realistic</span>
           <span>🔍 Audit trails</span>
         </div>
       </div>
@@ -91,7 +91,7 @@
         </article>
         <article class="card">
           <h3>Candidate experience</h3>
-          <p>Clear expectations, timing controls, and ADA‑friendly time extensions when needed.</p>
+          <p>Clear expectations and timing controls.</p>
         </article>
       </div>
     </section>
