--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
         <a href="about.html">About</a>
         <a href="privacy.html">Privacy</a>
         <a href="terms.html">Terms</a>
+        <a href="https://drive.google.com/file/d/1aX9kKfsiW5FhLEt5G0jXY1DxD4IGCifb/view?usp=drive_link">LCA notice</a>
       </nav>
     </div>
   </footer>
